# jscam

./: .gitignore  README.md  docker-compose.yaml  log.sh  run.sh
dev/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  entrypoint.sh  run.sh
src/: bootstrap_development.sh
src/jscam/: App.js  JRTPLIB.js  _rn-cli.config.js  app.json  index.js  package.json  rn-cli.config.js
src/jscam/android/: build.gradle  settings.gradle
src/jscam/android/app/: BUCK  build.gradle
src/jscam/android/app/src/main/: AndroidManifest.xml
src/jscam/android/app/src/main/cpp/: CMakeLists.txt  MyH264VideoRTPSink.cpp  MyH264VideoRTPSink.hh  myRTSPTest  rtspClient.cpp  rtspInterface.cpp
src/jscam/android/app/src/main/java/com/JRTPLIB/: JRTPLIBModule.java  JRTPLIBPackage.java
src/jscam/android/app/src/main/java/com/jrtplib/: JRTPModule.java  JRTPPackage.java
src/jscam/android/app/src/main/java/com/jscam/: MainActivity.java  MainApplication.java
src/jscam/android/app/src/main/java/com/rtsp/: JRTPModule.java  JRTPPackage.java  NalUnitExtractor.java  RTPDataSource.java  RTPMediaSource.java  RtspInterface.java
src/jscam/android/app/src/main/res/values/: strings.xml
src/jscam/android/gradle/wrapper/: gradle-wrapper.properties
src/jscam/config/: babel-transformer.js  transformers.js
src/jscam/ios/jscam/: AppDelegate.m  Info.plist
src/jscam/ios/jscam.xcodeproj/: project.pbxproj
src/jscam/ios/jscam.xcodeproj/xcshareddata/xcschemes/: jscam-tvOS.xcscheme  jscam.xcscheme
src/jscam/ios/jscam/Base.lproj/: LaunchScreen.xib
src/jscam/ios/jscamTests/: jscamTests.m
